# ACANVAS

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
docs/: IMPLEMENTATION_NOTES.md
src/: styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  storage.rs
src/lib/: backend.ts  files.test.ts  files.ts  ids.ts  seed.ts  storage.test.ts  storage.ts  url.ts
src/ui/: App.test.tsx  App.tsx
tests/e2e/: canvas.spec.ts
