[package]
name = "acanvas"
version = "0.1.0"
description = "ACANVAS local-first dark metacanvas"
authors = ["ACANVAS"]
edition = "2021"

[lib]
name = "acanvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
scraper = "0.22"
mime_guess = "2"
walkdir = "2"
zip = "2"
